# memebu-ontology-engine

./: FINAL_COUNTS.txt  ONTOLOGY_EXPANSION_SUMMARY.md  expand_ontology.py  expand_simple.py  pyproject.toml
data/20260213_185108_run_5_v0/: 20260213_185106_Computational.Neuroscience-A.Comprehensive.Approach.md  20260213_185106_Computational.Neuroscience-A.Comprehensive.Approach.owl  logs.jsonl  status.json
data/20260213_185108_run_5_v0/20260213_185106_Computational.Neuroscience-A.Comprehensive.Approach/: generation.json  output.owl
data/20260213_185108_run_5_v0/20260213_185106_Computational.Neuroscience-A.Comprehensive.Approach/ontology_json/: output.json  output.json.backup  output.json.bak  output.json.bak2
data/20260213_185108_run_5_v0/ontology_json/: 20260213_185106_Computational.Neuroscience-A.Comprehensive.Approach.json.tmp  __20260213_185106_Computational.Neuroscience-A.Comprehensive.Approach.json
docs/: BEST_PRACTICES.md  ONTOLOGY_PIPELINE.md
src/ontology_engine/: __init__.py  agent.py  config.py  converter.py  main.py  models.py  utils.py  validator.py
src/ontology_engine/prompts/: fix.py  generation.py  ontology_guide.md  review.py  system.py
